feat: 支持 key用数据库管理
